Added butter chicken recipe and fixed typos

--- a/recipes/chicken_biryani.html
+++ b/recipes/chicken_biryani.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Chicken Biryani</title>
 </head>
 <body>
     <h1>Chicken Biryani</h1>
     <a href="../index.html">Home</a>
-    <img src="../images/chicken_biryani.jpg">
+    <img src="../images/chicken_biryani.jpg" alt="Chicken Biryani">
     <h2>Description</h2>
     <p>Chicken biryani is a delicious Indian 
         rice dish that's typically reserved for special 
@@ -59,7 +59,7 @@
         <li>Add chicken mixture and potatoes; stir gently to combine. Bring to a boil.</li>
         <li>Reduce heat to very low, cover with a tight-fitting lid, and steam for 20 minutes without lifting the lid or stirring.</li>
         <li>Spoon biryani onto a warm serving dish.</li>
-        
+
     </ol> 
 </body>
 </html>
