--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken_biryani.html">chicken Biryani</a>
+    <a href="recipes/chicken_biryani.html">Chicken Biryani</a>
+    <a href="recipes/butter_chicken.html">Butter Chicken</a>
 </body>
 </html>
