Added naan link to index file

--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <h1>Odin Recipes</h1>
     <a href="recipes/chicken_biryani.html">Chicken Biryani</a>
     <a href="recipes/butter_chicken.html">Butter Chicken</a>
+    <a href="recipes/naan.html">Naan</a>
 </body>
 </html>
