--- a/recipes/naan.html
+++ b/recipes/naan.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Naan</h1>
+    <a href="../index.html">Home</a>
+    <img src="../images/Naan.jpg" alt="Naan">
+    <h2>Description</h2>
     <p>This homemade garlic naan recipe is cooked in a hot cast iron skillet rather than a tandoor oven, like restaurant naan. When cooked at the proper temperature, naan develops blistered bubbles with a lovely golden-black char. Reward yourself for a job well done by sopping the bread in copious amounts of curry.</p>
     <h2>Ingredients</h2>
     <ul>
